--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <p class="texto">Ou clique no botão a baixo:</p>
     <button id="btn" class="botao-link">chave aleatória</button>
 </main>
+<footer class="rodape">Coded by Lucas de Souza Santos © 2023</footer>
+</footer>
 </body>
 
 </html>
